@@ -7,6 +7,9 @@
 	just copying the surface link.  This means that trying to copy a
 	link that has no endpoint (danling link) is an error.
 	[Patch #591647] (darley)
+	(CopyRenameOneFile): this is currently disabled by default until
+	further issues with such behavior (like relative links) can be
+	handled correctly.
 
 	* tests/README: slight wording improvements
 
